<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_below="@+id/my_toolbar"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        android:text="@string/tableTitle"
        android:id="@+id/tableTitle"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/dishesList"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:elegantTextHeight="false" />

    <LinearLayout
            android:id="@+id/tableTopContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_below="@+id/tableTitle"
    >
        <CheckBox
                android:id="@+id/filterCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Attiva Filtro"
                android:visibility="invisible"/>

        <CheckBox
                android:id="@+id/aggregationCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AgGREGa"
                android:visibility="invisible"/>

    </LinearLayout>

    <View android:id="@+id/fakeView"
          android:layout_below="@+id/dishesList"
          android:layout_alignParentBottom="true"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/addToTable"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/fakeView"
        android:layout_alignParentLeft="true"
        android:text="@string/modifyTableText"/>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/fakeView"
        android:layout_alignParentRight="true"
        android:text="@string/updateButtonString"
        android:id="@+id/updateButton" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dishesList"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tableTopContainer"
        android:layout_above="@+id/totalPrice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PrezzoTotale"
        android:id="@+id/totalPrice"
        android:layout_above="@+id/addToTable"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
